--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   </parent>
   <groupId>io.fabric8.jenkins.plugins</groupId>
   <artifactId>openshift-sync</artifactId>
-  <version>0.1.31-SNAPSHOT</version>
+  <version>0.1.35-SNAPSHOT</version>
   <packaging>hpi</packaging>
 
   <properties>
@@ -117,6 +117,12 @@
        <groupId>org.jenkins-ci.plugins</groupId>
        <artifactId>credentials</artifactId>
        <version>2.1.9</version>
+    </dependency>
+    
+    <dependency>
+       <groupId>io.fabric8</groupId>
+       <artifactId>kubernetes-pipeline-project</artifactId>
+       <version>1.5</version>
     </dependency>
 
     <dependency>
